kubernetes-manifests/overlays/prod/stars.prod.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stars-prod-ingress
  namespace: stars-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cloud.google.com/neg: '{"ingress": false}'
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
    nginx.ingress.kubernetes.io/ssl-ciphers: "HIGH:!aNULL:!MD5"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
spec:
  tls:
  - secretName: stars-cert-bwstj
  backend:
    serviceName: stars-prod
    servicePort: 8080
  rules:
  - host: reports.aashe.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: stars-prod
          servicePort: 8080
