kubernetes-manifests/overlays/prod/np.allow.egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: stars-prod
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
