kubernetes-manifests/overlays/prod/np.deny.from.other.ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stars-prod
  name: deny-from-other-ns
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: stars-prod
